# SPMD

./: CMakeLists.txt  main.cpp  readme.md
challenge/: challenge.md
checker/include/: MCEvent.h  PrepareTracks.h  TrackChecker.h
checker/src/: CategoriesTrackChecker.cpp  MCEvent.cpp  PrepareTracks.cpp  TrackChecker.cpp
cmake/: ISPCBuild.cmake
include/: AlignedAllocator.h  ClusteringCommon.h  ClusteringDefinitions.h  GlobalEventCut.h  InputReader.h  InputTools.h  SciFiRawEvent.h  UTRawEvent.h  VPClus.h  VSPClus.h  VeloDefinitions.h  VeloEventModel.h
ispc/calculate_phi_and_sort/: CalculatePhi.ispc  CalculatePhiAndSort.ispc  SortByPhi.ispc
ispc/common/: VeloCommon.ih  VeloCommon.ispc  VeloConstants.ih  VeloData.ih
ispc/fill_candidates/: FillCandidates.ispc
ispc/mask_clustering/: EstimateInputSize.ispc  MaskClustering.ispc
ispc/search_by_triplet/: ProcessModules.ispc  SearchByTriplet.ispc  TrackForwarding.ispc  TrackSeeding.ispc
ispc/utils/: ApplyPermutation.ih  ApplyPermutation.ispc  BinarySearchFirstCandidate.ih  BinarySearchFirstCandidate.ispc  HitPhi.ih  HitPhi.ispc
ispc/weak_tracks_adder/: WeakTracksAdder.ispc
src/: ClusteringCommon.cpp  GlobalEventCut.cpp  InputReader.cpp  InputTools.cpp  VPClus.cpp  VSPClus.cpp  VeloDefinitions.cpp
